because why not

--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -26,6 +26,9 @@
     "developers": [
       {
         "name": "Ted Tolboom"
+      },
+      {
+        "name": "Jorrit Pouw"
       }
     ]
   },
