--- a/app.json
+++ b/app.json
@@ -26,6 +26,9 @@
     "developers": [
       {
         "name": "Ted Tolboom"
+      },
+      {
+        "name": "Jorrit Pouw"
       }
     ]
   },
@@ -65,6 +68,136 @@
             ]
           }
         ]
+      },
+      {
+        "id": "Set_DHW_mode",
+        "title": {
+          "en": "Set domestic hot water mode",
+          "nl": "Verander de tapwater comfort modus"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=anna"
+          },
+          {
+            "name": "mode",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "on",
+                "label": {
+                  "en": "Comfort",
+                  "nl": "Comfort"
+                }
+              },
+              {
+                "id": "off",
+                "label": {
+                  "en": "Normal",
+                  "nl": "Normaal"
+                }
+              }
+            ]
+          }
+        ]
+      },
+      {
+        "id": "Set_Location_Preset",
+        "title": {
+          "en": "Change the preset",
+          "nl": "Stel scene in"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=anna"
+          },
+          {
+            "name": "preset",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "none",
+                "title": {
+                  "en": "Manual",
+                  "nl": "Handmatig"
+                }
+              },
+              {
+                "id": "home",
+                "title": {
+                  "en": "Home",
+                  "nl": "Thuis"
+                }
+              },
+              {
+                "id": "away",
+                "title": {
+                  "en": "Away",
+                  "nl": "Weg"
+                }
+              },
+              {
+                "id": "asleep",
+                "title": {
+                  "en": "Night",
+                  "nl": "Nacht"
+                }
+              },
+              {
+                "id": "vacation",
+                "title": {
+                  "en": "Vacation",
+                  "nl": "Vakantie"
+                }
+              },
+              {
+                "id": "no_frost",
+                "title": {
+                  "en": "Frost protection",
+                  "nl": "Anti-vries"
+                }
+              }
+            ]
+          }
+        ]
+      },
+      {
+        "id": "Set_DHW_mode",
+        "title": {
+          "en": "Set domestic hot water mode",
+          "nl": "Verander de tapwater comfort modus"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=smile"
+          },
+          {
+            "name": "mode",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "on",
+                "label": {
+                  "en": "Comfort",
+                  "nl": "Comfort"
+                }
+              },
+              {
+                "id": "off",
+                "label": {
+                  "en": "Normal",
+                  "nl": "Normaal"
+                }
+              }
+            ]
+          }
+        ]
       }
     ]
   },
@@ -78,9 +211,11 @@
         "boiler_state",
         "DHW_state",
         "modulation_level",
+        "measure_pressure",
         "measure_temperature.intended",
         "measure_temperature.boiler",
         "measure_temperature.return",
+        "measure_temperature.outdoor",
         "boiler_status_code",
         "boiler_error_code",
         "DHW_mode"
@@ -207,8 +342,10 @@
       "class": "thermostat",
       "capabilities": [
         "target_temperature",
+        "location_preset",
         "measure_temperature",
-        "location_preset"
+        "alarm_motion",
+        "measure_luminance"
       ],
       "capabilitiesOptions": {
         "target_temperature": {
@@ -339,6 +476,101 @@
         "meter_power"
       ],
       "id": "plug"
+    },
+    {
+      "name": {
+        "en": "Smile T/230"
+      },
+      "class": "sensor",
+      "capabilities": [
+        "boiler_state",
+        "DHW_state",
+        "modulation_level",
+        "measure_pressure",
+        "measure_temperature.intended",
+        "measure_temperature.boiler",
+        "measure_temperature.return",
+        "measure_temperature.outdoor",
+        "boiler_status_code",
+        "boiler_error_code",
+        "DHW_mode"
+      ],
+      "capabilitiesOptions": {
+        "measure_temperature.intended": {
+          "title": {
+            "en": "Intended boiler temperature",
+            "nl": "Gewenste ketel temperatuur"
+          },
+          "preventInsights": false
+        },
+        "measure_temperature.boiler": {
+          "title": {
+            "en": "Boiler temperature",
+            "nl": "Aanvoertemperatuur"
+          },
+          "preventInsights": false
+        },
+        "measure_temperature.return": {
+          "title": {
+            "en": "Return water temperature",
+            "nl": "Retourtemperatuur"
+          },
+          "preventInsights": false
+        },
+        "measure_temperature.outdoor": {
+          "title": {
+            "en": "Outside temperature",
+            "nl": "Buitentemperatuur"
+          },
+          "preventInsights": false
+        }
+      },
+      "images": {
+        "large": "/drivers/smile/assets/images/large.png",
+        "small": "/drivers/smile/assets/images/small.png"
+      },
+      "pair": [
+        {
+          "id": "list_bridges",
+          "template": "list_devices",
+          "options": {
+            "singular": true
+          },
+          "navigation": {
+            "next": "loading"
+          }
+        },
+        {
+          "id": "loading",
+          "template": "loading"
+        },
+        {
+          "id": "pincode",
+          "template": "pincode",
+          "options": {
+            "type": "text",
+            "length": 8,
+            "title": {
+              "en": "Enter password"
+            },
+            "hint": {
+              "en": "Enter the Smile's password. You can find this on the back of the device."
+            }
+          }
+        },
+        {
+          "id": "list_devices",
+          "template": "list_devices",
+          "navigation": {
+            "next": "add_devices"
+          }
+        },
+        {
+          "id": "add_devices",
+          "template": "add_devices"
+        }
+      ],
+      "id": "smile"
     },
     {
       "images": {
@@ -579,6 +811,13 @@
       "setable": true,
       "type": "enum",
       "values": [
+        {
+          "id": "none",
+          "title": {
+            "en": "Manual",
+            "nl": "Handmatig"
+          }
+        },
         {
           "id": "home",
           "title": {
